add：821. 字符的最短距离 - 方法二：遍历比大小

--- a/_posts/算法、刷题/2021-07-02-821. 字符的最短距离.md
+++ b/_posts/算法、刷题/2021-07-02-821. 字符的最短距离.md
@@ -35,72 +35,103 @@ typora-root-url: ..
 
 ```js
  var shortestToChar = function(s, c) {
-        let res = [];
-        let ifFirst = true;
-        while(s.length > 0) {
-            let index = s.indexOf(c);
-            s = s.substring(index + 1,);
-            let nextIndex = s.indexOf(c);
-            // 当前 index 为 0
-            if (index === 0) {
-                res.push(0);
-                ifFirst = false;
-                continue
-            }
-            // 第一个匹配到的c
-            if(ifFirst) {
-                for(let i = index; i >= 0 ;i--) {
-                    res.push(i);
-                }
-                ifFirst = false;
-                // 第一次 + c 为最后一位
-                if(!s) {
-                    break
-                }
-                continue
-            }
-            
-            // 中间
-            if (index !== -1) {
-                let mid = Math.ceil(index / 2);
-                let isOdd = index % 2; 
-                for(let i = 1; i <= index; i++) {
-                    if(i <= mid) {
-                        res.push(i);
-                        continue
-                    }
-                    // 奇偶数
-                    if(isOdd) {
-                        mid--;
-                        isOdd = 0;
-                    }
+     let res = [];
+     let ifFirst = true;
+     while(s.length > 0) {
+         let index = s.indexOf(c);
+         s = s.substring(index + 1,);
+         let nextIndex = s.indexOf(c);
+         // 当前 index 为 0
+         if (index === 0) {
+             res.push(0);
+             ifFirst = false;
+             continue
+         }
+         // 第一个匹配到的c
+         if(ifFirst) {
+             for(let i = index; i >= 0 ;i--) {
+                 res.push(i);
+             }
+             ifFirst = false;
+             // 第一次 + c 为最后一位
+             if(!s) {
+                 break
+             }
+             continue
+         }
 
-                    res.push(mid--);
-                }
-                res.push(0);
-                // 最后一个字母为 c 的情况
-                if (!s) {
-                    break
-                }
-                continue
-            }
-            
+         // 中间
+         if (index !== -1) {
+             let mid = Math.ceil(index / 2);
+             let isOdd = index % 2; 
+             for(let i = 1; i <= index; i++) {
+                 if(i <= mid) {
+                     res.push(i);
+                     continue
+                 }
+                 // 奇偶数
+                 if(isOdd) {
+                     mid--;
+                     isOdd = 0;
+                 }
 
-            // 最后一个 c 
-            for(let i = 1; i < index ; i++) {
-                res.push(i);
-            }
-            // c 后面还有内容
-            if (index === -1) {
-                for(let i = 1; i <= s.length ; i++) {
-                    res.push(i);
-                }
-            }
-            break
-        }
-        return res
-    };
+                 res.push(mid--);
+             }
+             res.push(0);
+             // 最后一个字母为 c 的情况
+             if (!s) {
+                 break
+             }
+             continue
+         }
+
+
+         // 最后一个 c 
+         for(let i = 1; i < index ; i++) {
+             res.push(i);
+         }
+         // c 后面还有内容
+         if (index === -1) {
+             for(let i = 1; i <= s.length ; i++) {
+                 res.push(i);
+             }
+         }
+         break
+     }
+     return res
+ };
 ```
 
+- 方法二： 
 
+<img src="/../img/assets_2019/image-20210702104815446.png" alt="image-20210702104815446" style="zoom:33%;" />
+
+时间复杂度：O(n)，空间复杂度：xx
+
+核心逻辑：比较当前 i 与前后字符串位置的大小，取较小者为结果
+
+```js
+var shortestToChar = (s,c) => {
+    let res = [];
+    let now = s.indexOf(c);
+    let prev = now;
+    for(let i = 0;i < s.length ; i++) {
+        now = s.indexOf(c, i);
+        if (i <= prev) {
+            res.push(now - i);
+        }
+        if (i > prev && i <= now) {
+            let dis = Math.min((now - i), (i - prev));
+            res.push(dis);
+        }
+        if (now === -1) {
+            res.push(i - prev);
+        }
+        if (i === now) {
+            prev = now;
+        }
+    }
+    return res
+}
+```
 
