modify：浏览器架构认知错误 - 网络进程->浏览器进程的网络线程

--- a/_posts/浏览器原理相关内容/2021-04-06-01 浏览器进程.md
+++ b/_posts/浏览器原理相关内容/2021-04-06-01 浏览器进程.md
@@ -16,6 +16,7 @@ typora-root-url: ..
 
 Chrome打开一个页面需要启动多少进程？4个
 ![image-20210408215140897](/../img/assets_2019/image-20210408215140897.png)
+
  #### 进程和线程
 **进程**：一个程序的运行实例。详细解释就是，启动一个程序的时候，操作系统会为该程序创建一块内存，用来存放代码、运行中的数据和一个执行任务的主线程，我们把这样的一个运行环境叫进程。
 **进程和线程的关系**：进程中使用多线程并行处理能提升运算效率。
@@ -35,6 +36,13 @@ Chrome打开一个页面需要启动多少进程？4个
 
 ####  浏览器进程
 主要负责界面显示、用户交互、子进程管理，同时提供存储等功能。
+
+浏览器进程包括了几个线程：
+
+- UI 线程负责绘制工具栏中的按钮、地址栏等
+- 网络线程负责从网络中获取数据
+- 存储线程负责文件等功能
+
 ####  渲染进程
 核心任务是将 HTML、CSS 和 JavaScript 转换为用户可以与之交互的网页，排版引擎Blink和JavaScript引擎V8都是运行在该进程中，默认情况下，**Chrome会为每个Tab标签创建一个渲染进程**。因为渲染进程所有的内容都是通过网络获取的，出于安全考虑，渲染进程都是运行在沙箱模式下。
 #### GPU进程
@@ -42,4 +50,4 @@ Chrome打开一个页面需要启动多少进程？4个
 #### 网络进程
 主要负责页面的网络资源加载，之前是作为一个模块运行在浏览器进程里面的，直至最近才独立出来，成为一个单独的进程。
 #### 插件进程
-主要是负责插件的运行，因插件易崩溃，所以需要通过插件进程来隔离，以保证插件进程崩溃不会对浏览器和页面造成影响
+主要是负责插件的运行，因插件易崩溃，所以需要通过插件进程来隔离，以保证插件进程崩溃不会对浏览器和页面造成影响，例如 flash
