--- a/_posts/浏览器原理相关内容/2021-04-08-04 导航流程：从输入url到打开页面发生了什么.md
+++ b/_posts/浏览器原理相关内容/2021-04-08-04 导航流程：从输入url到打开页面发生了什么.md
@@ -20,13 +20,17 @@ typora-root-url: ..
 ![image-20210408215608834](/../img/assets_2019/image-20210408215608834.png)
 
 ## 1、用户输入
+
+浏览器进程中的 UI 线程对输入内容做区分：
+
 -   查询关键字是url -- 根据规则，把这段内容加上协议，合成为完整的URL
 -   查询关键字是搜索内容 -- 使用浏览器默认的搜索引擎，来合成新的带搜索关键字的URL
  ## 2、URL请求过程
-**浏览器进程**会通过进程间通信（IPC）把URL请求发送至**网络进程**，网络进程接收到URL请求后，会在这里发起真正的URL请求流程。
+**浏览器进程 - UI 线程**会通过进程间通信（IPC）把URL请求发送至**浏览器 - 网络线程**，网络线程接收到URL请求后，先根据适当的网络协议为这次请求建立连接（DNS 和 TLS），再发起真正的URL请求流程 — > 此时浏览器标签页的标题会出现“加载中”的图标
 
 URL请求流程
-1、网络进程会查找**本地缓存**是否缓存了该资源
+1、网络线程会查找**本地缓存**是否缓存了该资源
+
 -   有，直接返回资源
 -   没有缓存，进入网络请求流程
 
@@ -37,13 +41,15 @@ URL请求流程
 
 4、浏览器端会构建请求行、请求头等信息，并把和该域名相关的Cookie等数据附加到请求头中，然后**向服务器发送构建的请求信息**
 
-5、服务器会根据请求信息**生成响应数据**，并发给**网络进程**
+5、服务器会根据请求信息**生成响应数据**，并发给**网络线程**
 
-7、**网络进程解析响应头**
--   返回的状态码是301或者302 -- 重定向，网络进程会从响应头的Location字段里面读取重定向的地址，然后再发起新的HTTP或者HTTPS请求，一切又重头开始了
+7、**网络线程解析响应头**
+
+-   返回的状态码是301或者302 -- 重定向，网络线程会从响应头的Location字段里面读取重定向的地址 —> **网络线程**会通知浏览器进程中的 **UI线程** 需要重定向  —>然后以新的地址开始请求资源，一切又重头开始了
 -   状态码是200，继续解析
 
-8、响应数据类型处理，区分响应体中的数据类型
+8、响应数据类型处理，网络线程通过 `Content-Type` 区分响应体中的数据类型
+
 - 响应头中`Content-Type:text/html`为HTML格式，继续进行导航流程，**准备渲染进程**
 
 - 如果响应头中`Content-Type:application/octet-stream`为字节流类型的，通常情况下，浏览器会按照下载类型来处理该请求 -- 该请求会被提交给浏览器的下载管理器，同时该URL请求的**导航流程就此结束**
@@ -61,7 +67,7 @@ https://www.geekbang.org
 https://www.geekbang.org:8080
 ```
 
-注意：渲染进程准备好之后，还不能立即进入文档解析状态，因为此时的文档数据还在**网络进程**中，并没有提交给渲染进程，所以下一步就进入了提交文档阶段。
+注意：渲染进程准备好之后，还不能立即进入文档解析状态，因为此时的文档数据还在**网络线程**中，并没有提交给渲染进程，所以下一步就进入了提交文档阶段。
 
 ## 4、提交文档
 文档：指URL请求的响应体数据
@@ -69,14 +75,28 @@ https://www.geekbang.org:8080
 ![image-20210408220519097](/../img/assets_2019/image-20210408220519097.png)
 
 1⃣️：“提交文档”的消息是由**浏览器进程**发出的
-2⃣️：**渲染进程**接收到“提交文档”的消息后，会和网络进程建立传输数据的“管道”
+2⃣️：**渲染进程**接收到“提交文档”的消息后，会和**网络线程**建立传输数据的“管道”
 3⃣️：等文档数据传输完成之后，**渲染进程**会返回“确认提交”的消息给浏览器进程
-4⃣️：**浏览器进程**在收到“确认提交”的消息后，会更新浏览器界面状态，包括了**安全状态、地址栏的URL、前进后退的历史状态，并更新Web页面**，即下图标注的四个内容
+4⃣️：**浏览器进程**在收到“确认提交”的消息后，会更新浏览器界面状态，包括了**安全状态、地址栏的URL、前进后退的历史状态(硬盘内存)，并更新Web页面**，即下图标注的四个内容
 ![image-20210408221028061](/../img/assets_2019/image-20210408221028061.png)
 
 所以：在浏览器的地址栏里面输入了一个地址后，之前的页面没有立马消失，而是要加载一会儿才会更新页面
 
 ## 5、渲染阶段
-在这个阶段进行页面解析和子资源加载，完成后**渲染进程**会发送一个消息给**浏览器进程**，浏览器接收到消息后，会停止标签图标上的加载动画
+在这个阶段进行页面解析和子资源（iframe）加载，完成后**渲染进程**会发送一个消息给**浏览器进程** —> 也就是 `onLoad` 事件触发后发送 —>浏览器接收到消息后，UI线程会停止标签图标上的加载动画
 ![image-20210408221050867](/../img/assets_2019/image-20210408221050867.png)
+
+但这里"结束"并不意味着所有的加载工作都结束了，因为可能还有 JavaScript 在加载额外的资源或者渲染新的视图。
+
+
+
+## 6、访问不同的站点
+
+1-5 是一次完整的普通访问，当我们输入另外的地址时，浏览器会重复上面的过程。
+
+但是**在开始新的访问前**，会确认当前的站点是否关心 `beforeunload` 事件。由于所有的包括渲染、运行 Javascript 的工作都发生在渲染进程中，浏览器进程需要在 **新的访问开始前** 与渲染进程确认当前的站点是否关心`unload`
+
+补充：`beforeunload`事件可以提醒用户是否要访问新的站点或者关闭页签，如果用户拒绝则新的访问或关闭会被阻止。
+
+案例：如果一次访问是从一个渲染进程中发起的，例如用户点击一个链接或者运行 JavaScript 代码`location = 'http://newsite.com'`时，渲染进程首先检查`beforeunload`。然后再执行和浏览器进程初始化访问同样的步骤，只不过区别在于这样的访问请求是**由渲染进程向浏览器进程**发起的。
 
