modify：复习，并修改部分样式

--- a/_posts/浏览器原理相关内容/2021-04-06-01 浏览器进程.md
+++ b/_posts/浏览器原理相关内容/2021-04-06-01 浏览器进程.md
@@ -15,23 +15,32 @@ typora-root-url: ..
 # 01 浏览器进程
 
 Chrome打开一个页面需要启动多少进程？4个
-![image-20210408215140897](/../img/assets_2019/image-20210408215140897.png)
+
+<img src="/../img/assets_2019/image-20210408215140897.png" alt="image-20210408215140897" style="zoom:30%;" />
+
+<img src="/../img/assets_2019/17242218-87342448f207d785.png" alt="img" style="zoom:63%;" />
 
  #### 进程和线程
 **进程**：一个程序的运行实例。详细解释就是，启动一个程序的时候，操作系统会为该程序创建一块内存，用来存放代码、运行中的数据和一个执行任务的主线程，我们把这样的一个运行环境叫进程。
+
 **进程和线程的关系**：进程中使用多线程并行处理能提升运算效率。
 
 进程和线程的关系的4个特点：
-1. 进程中的任意一线程执行出错，都会导致整个进程的崩溃
+1. 进程中的**任意一线程执行出错，都会导致整个进程的崩溃**
+
 2. 线程之间共享进程中的数据
-![image-20210408215210816](/../img/assets_2019/image-20210408215210816.png)
-3. 当一个进程关闭之后，操作系统会回收进程所占用的内存
-4. 进程之间的内容相互隔离（进程间可通信（**IPC**）机制）
+
+  <img src="/../img/assets_2019/image-20210408215210816.png" alt="image-20210408215210816" style="zoom:25%;" />
+
+3. 当一个进程关闭之后，操作系统会**回收进程所占用的内存**
+
+4. 进程之间的内容相互隔离（进程间可**通信（IPC）机制**）
 
 
 #### 多进程浏览器
-当前浏览器是多进程浏览器：包括1个浏览器（Browser）主进程、1个 GPU 进程、1个网络（NetWork）进程、多个渲染进程和多个插件进程（插件进程依据页面依赖而增加）
-![image-20210408215258029](/../img/assets_2019/image-20210408215258029.png)
+当前浏览器是多进程浏览器：包括**1个浏览器主进程、1个 GPU 进程、1个网络进程、多个渲染进程和多个插件进程**（插件进程依据页面依赖而增加）
+
+<img src="/../img/assets_2019/image-20210408215258029.png" alt="image-20210408215258029" style="zoom:30%;" />
 
 
 ####  浏览器进程
@@ -39,15 +48,37 @@ Chrome打开一个页面需要启动多少进程？4个
 
 浏览器进程包括了几个线程：
 
-- UI 线程负责绘制工具栏中的按钮、地址栏等
-- 网络线程负责从网络中获取数据
-- 存储线程负责文件等功能
+- UI 线程：负责绘制工具栏中的按钮、地址栏等
+- 网络线程：负责从网络中获取数据
+- 存储线程：负责文件等功能
 
 ####  渲染进程
-核心任务是将 HTML、CSS 和 JavaScript 转换为用户可以与之交互的网页，排版引擎Blink和JavaScript引擎V8都是运行在该进程中，默认情况下，**Chrome会为每个Tab标签创建一个渲染进程**。因为渲染进程所有的内容都是通过网络获取的，出于安全考虑，渲染进程都是运行在沙箱模式下。
+- 核心任务
+
+    将 HTML、CSS 和 JavaScript 转换为用户可以与之交互的网页。
+
+- 进程创建/复用
+
+    排版引擎Blink和JavaScript引擎V8都是运行在该进程中，默认情况下，**Chrome会为每个Tab标签创建一个渲染进程**。（相同站点，复用进程）
+
+- 沙箱模式
+
+    因为渲染进程所有的内容都是通过网络获取的，出于安全考虑，渲染进程都是运行在**沙箱模式**下。
+
+- 渲染进程主要包括了几个线程：
+
+    - 主线程：负责解析，编译或运行代码等
+
+    - 合成线程和光栅线程：负责更高效和顺畅的渲染页面
+
 #### GPU进程
-其实，Chrome刚开始发布的时候是没有GPU进程的。而GPU的使用初衷是为了实现3D CSS的效果，只是随后网页、Chrome的UI界面都选择采用GPU来绘制，这使得GPU成为浏览器普遍的需求。最后，Chrome在其多进程架构上也引入了GPU进程。
+其实，Chrome刚开始发布的时候是没有GPU进程的。
+
+而GPU的使用初衷是为了实现3D CSS的效果，只是随后网页、Chrome的UI界面都选择采用GPU来绘制，这使得GPU成为浏览器普遍的需求。
+
+最后，Chrome在其多进程架构上也引入了GPU进程。
+
 #### 网络进程
-主要负责页面的网络资源加载，之前是作为一个模块运行在浏览器进程里面的，直至最近才独立出来，成为一个单独的进程。
+主要负责页面的**网络资源加载**，之前是作为一个模块运行在浏览器进程里面的，直至最近才独立出来，成为一个单独的进程。
 #### 插件进程
 主要是负责插件的运行，因插件易崩溃，所以需要通过插件进程来隔离，以保证插件进程崩溃不会对浏览器和页面造成影响，例如 flash
