--- a/_posts/浏览器原理相关内容/2021-04-06-浏览器知识图谱.md
+++ b/_posts/浏览器原理相关内容/2021-04-06-浏览器知识图谱.md
@@ -18,27 +18,27 @@ typora-root-url: ..
 
 一、浏览器的5个核心部分
 
-![image-20210406225452221](/../img/assets_2019/image-20210406225452221.png)
+<img src="/../img/assets_2019/image-20210406225452221.png" alt="image-20210406225452221" style="zoom:23%;" />
 
 1、浏览器架构设计：每个页面都是独立运行在一个进程里面的
 
 2、js引擎
 
-![image-20210406225523718](/../img/assets_2019/image-20210406225523718.png)
+<img src="/../img/assets_2019/image-20210406225523718.png" alt="image-20210406225523718" style="zoom:23%;" />
 
 3、页面工作原理
 
 页面中事件循环系统是如何运作的？
 
-![image-20210406225610227](/../img/assets_2019/image-20210406225610227.png)
+<img src="/../img/assets_2019/image-20210406225610227.png" alt="image-20210406225610227" style="zoom:45%;" />
 
 构建页面的核心流程是什么？（性能问题）
 
-![image-20210406225643817](/../img/assets_2019/image-20210406225643817.png)
+<img src="/../img/assets_2019/image-20210406225643817.png" alt="image-20210406225643817" style="zoom:30%;" />
 
 4、浏览器网络
 
-![image-20210406225701525](/../img/assets_2019/image-20210406225701525.png)5、浏览器安全
+<img src="/../img/assets_2019/image-20210406225701525.png" alt="image-20210406225701525" style="zoom:50%;" />5、浏览器安全
 
-![image-20210406225732548](/../img/assets_2019/image-20210406225732548.png)
+<img src="/../img/assets_2019/image-20210406225732548.png" alt="image-20210406225732548" style="zoom:38%;" />
 
