--- a/_posts/浏览器原理相关内容/2021-04-08-03 为什么很多网站第二次打开速度会很快.md
+++ b/_posts/浏览器原理相关内容/2021-04-08-03 为什么很多网站第二次打开速度会很快.md
@@ -15,10 +15,13 @@ typora-root-url: ..
 # 03 为什么很多网站第二次打开速度会很快
 
 主要原因是第一次加载页面过程中，缓存了一些耗时的数据
+
 1、DNS缓存：在浏览器本地把对应的IP和域名关联起来
+
 2、浏览器页面资源缓存
+
 -   请求一次资源后，只要`Cache-Control:Max-age=2000`设置的**缓存时间还没有过期**，如果再次请求该资源，会直接返回缓存中的资源给浏览器。
-- 如果缓存过期了，浏览器会继续发起网络请求，并在请求头重携带 `If-None-Match` 判断**请求的资源没有更新**，就返回 304 状态码，重新设置过期时间，继续使用缓存中的资源
+- 如果缓存过期了，浏览器会继续发起网络请求，并在请求头重携带 `If-None-Match` 判断**请求的资源没有更新**，就返回 304 状态码，<u>重新设置过期时间，继续使用缓存中的资源</u>
 -   如果缓存过期了，并且请求的资源有更新，那么服务器会直接**返回最新资源**给浏览器
 
-![image-20210408213240146](/../img/assets_2019/image-20210408213240146.png)
+<img src="/../img/assets_2019/image-20210408213240146.png" alt="image-20210408213240146" style="zoom:23%;" />
