--- a/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
@@ -14,7 +14,8 @@ typora-root-url: ..
 
 # 06 JS执行顺序：编译+执行
 
-![image-20210410153255736](/../img/assets_2019/image-20210410153255736.png)
+<img src="/../img/assets_2019/image-20210410153255736.png" alt="image-20210410153255736" style="zoom:30%;" />
+
 ## 1、编译阶段
 ![image-20210410153313919](/../img/assets_2019/image-20210410153313919.png)
 
