--- a/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
@@ -17,9 +17,9 @@ typora-root-url: ..
 <img src="/../img/assets_2019/image-20210410153255736.png" alt="image-20210410153255736" style="zoom:30%;" />
 
 ## 1、编译阶段
-![image-20210410153313919](/../img/assets_2019/image-20210410153313919.png)
+<img src="/../img/assets_2019/image-20210410153313919.png" alt="image-20210410153313919" style="zoom:50%;" />
 
-会生成两部分内容：
+编译阶段会生成两部分内容：
 -   执行上下文
 -   可执行代码
 ### 执行上下文（Execution context）
@@ -32,8 +32,8 @@ typora-root-url: ..
 按照顺序一行一行地执行可执行代码
 
 注意：
--  1、 一段代码如果定义了两个相同名字的函数，那么最终生效的是最后一个函数
-```javascript
+-   一段代码如果定义了两个相同名字的函数，那么最终生效的是最后一个函数
+```js
 function showName() {
     console.log('我是个坑');
 }
@@ -41,6 +41,7 @@ showName();
 function showName() {
     console.log('我还是个坑');
 }
-showName(); 
+showName(); // 我还是个坑
 ```
-输出的结果是：‘我还是个坑’‘我还是个坑’
+输出的结果是：‘我还是个坑’
+
