--- a/_posts/浏览器原理相关内容/2021-04-10-07 调用栈（执行上下文栈）.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-07 调用栈（执行上下文栈）.md
@@ -14,20 +14,23 @@ typora-root-url: ..
 
 # 07 调用栈（执行上下文栈）
 
-### 执行栈定义
+### 调用栈定义
 在执行上下文创建好后，JavaScript引擎会将执行上下文压入栈中，通常把这种用来**管理执行上下文的栈**称为执行上下文栈，又称调用栈
 
 ### 有三种情况会创建执行上下文
--   js执行全局代码时 -- 编译全局代码，并创建**全局执行上下文**
--   调用一个函数时 -- 编译函数，并创建**函数执行上下文**（函数执行结束后，当前函数执行上下文被销毁）
+-   js执行 **全局代码** 时 -- 编译全局代码，并创建**全局执行上下文**
+-   调用一个 **函数** 时 -- 编译函数，并创建**函数执行上下文**（函数执行结束后，当前函数执行上下文被销毁）
 -   eval函数 -- 编译并创建执行上下文
 
 
 ### 调用函数的过程
 从全局执行上下文中，取出add函数代码 --> 
+
 对代码进行编译，并创建该函数的执行上下文和可执行代码 -->
+
 执行代码，输出结果
-![image-20210410160131036](/../img/assets_2019/image-20210410160131036.png)
+
+<img src="/../img/assets_2019/image-20210410160131036.png" alt="image-20210410160131036" style="zoom:43%;" />
 
 ### 执行栈的变化
 用代码展示下一段代码执行过程中执行栈的变化
@@ -43,5 +46,5 @@ function addAll(b,c){
 }
 addAll(6, 3);
 ```
-![image-20210410160232879](/../img/assets_2019/image-20210410160232879.png)
+<img src="/../img/assets_2019/image-20210410160232879.png" alt="image-20210410160232879" style="zoom:150%;" />
 
