--- a/_posts/浏览器原理相关内容/2021-04-10-08 JS如何实现块级作用域.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-08 JS如何实现块级作用域.md
@@ -25,7 +25,7 @@ typora-root-url: ..
 -   变量容易在不被察觉的情况下被覆盖掉
 -   本应销毁的变量没有被销毁
 
-ES6通过引入**块级作用域**并配合let、const关键字解决变量提升的问题，作用块内声明的变量不影响块外面的变量。
+ES6通过引入**块级作用域**并配合let、const关键字解决 <u>变量提升</u> 的问题，作用块内声明的变量不影响块外面的变量。
 
 ### 块级作用域的实现
 从执行上下文角度看**块级作用域的实现**（以let为例）：
@@ -46,6 +46,12 @@ function foo(){
 }   
 foo();
 ```
+注意： 
+
+- var - 存储在 **变量环境**；let/const - 存储在 **词法环境**；
+- **创建** 执行上下文的时候，var 定义的变量就会声明为 `undefined`
+- 当作用域块执行结束后，内部定义的变量就会从 **词法环境** 栈顶弹出
+
 ![image-20210410195713644](/../img/assets_2019/image-20210410195713644.png)
 
 ### 词法环境
@@ -53,4 +59,5 @@ const 和 let 进入的【**词法环境**】，维护了一个**小型栈结构
 
 ### 查找变量的顺序
 沿着**词法环境的栈顶向下**查询，如果在词法环境中的某个块中查找到了，就直接返回给JavaScript引擎，如果没有查找到，那么继续在**变量环境**中查找
-![image-20210410195802828](/../img/assets_2019/image-20210410195802828.png)
+
+<img src="/../img/assets_2019/image-20210410195802828.png" alt="image-20210410195802828" style="zoom:25%;" />
