--- a/_posts/浏览器原理相关内容/2021-04-11-10 执行上下文视角的 this.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-10 执行上下文视角的 this.md
@@ -14,23 +14,26 @@ typora-root-url: ..
 
 # 10 执行上下文视角的 this
 
-    作用域链和`this`是两套不同的体系，唯一的关系是在全局上下文中的`this`指向`window`对象，作用域链的最底端包含了`window`对象
+    作用域链和this是两套不同的体系，唯一的关系是在全局上下文中的this指向window对象，作用域链的最底端包含了window对象
 ## this是什么
 如下图所示，`this`是和执行上下文绑定的，每个执行上下文中都有一个`this`，按照执行上下文的分类，`this`也可以分为三类：
--   全局执行上下文中的`this`
--   函数执行上下文中的`this`
--   `eval`中的`this`（略过）
-<img src="/../img/assets_2019/image-20210411141927332.png" alt="image-20210411141927332" style="zoom:20%;" />
+- 全局执行上下文中的`this`
+
+- 函数执行上下文中的`this`
+
+- `eval`中的`this`（略过）
+
+    <img src="/../img/assets_2019/image-20210411141927332.png" alt="image-20210411141927332" style="zoom:15%;" />
 
 ###  全局执行上下文中的this
-    全局执行上下文中的`this`指向`window`对象
+    全局执行上下文中的 this 指向 window 对象
 
  ### 函数上下文中的this
-    在默认情况下调用一个函数，其执行上下文中的`this`也是指向`window`对象的
+    在默认情况下调用一个函数，其执行上下文中的 this 也是指向 window 对象的
  有三种方法改变`this`指向：
 
  #### 1、call/apply/bind函数
-通过`call/apply/bind`函数显式改变`this`指向
+通过`call/apply/bind`函数 **显式改变** `this`指向
 ```javascript
 let bar = {
   myName : " 极客邦 ",
@@ -44,23 +47,23 @@ foo.apply(bar,["name", "17"]);
 foo.bind(bar)("name", "16");
 ```
 
- #### 2、通过对象调用方法设置
+ #### 2、通过对象调用方法 - 指向对象本身
 
     在全局环境中调用一个函数，函数内部的 this 指向的是全局变量 window。
     通过一个对象来调用其内部的一个方法，该方法的执行上下文中的 this 指向对象本身。
 
-通过下方代码可以验证：通过`myObj`对象调用`showThis`方法 --> 最终输出的`this`值是指向`myObj`的
+通过下方代码可以验证：通过 `myObj` 对象调用 `showThis` 方法 --> 最终输出的`this`值是指向`myObj`的
  ```javascript
 var myObj = {
   name : " 极客时间 ", 
   showThis: function(){
-    console.log(this)
+    console.log(this) // this -> myObj
   }
 }
 myObj.showThis()
  ```
 
-JS执行引擎在执行 `myObj.showThis()`时，将其转化成`call`函数执行
+原因：JS执行引擎在执行 `myObj.showThis()`时，将其转化成 `call` 函数执行，代码如：
 ```javascript
 myObj.showThis.call(myObj);
 ```
@@ -75,15 +78,16 @@ var myObj = new CreateObj()
  ```
 
 我们复习一下，JS引擎在`new`一个构造函数的时候，做了四件事：
--   首先创建了一个空对象 tempObj；
--   接着调用 CreateObj.call 方法，并将 tempObj 作为 call 方法的参数，这样当 CreateObj 的执行上下文创建时，它的 this 就指向了 tempObj 对象；
--   然后执行 CreateObj 函数，此时的 CreateObj 函数执行上下文中的 this 指向了 tempObj 对象；
+-   首先创建了一个空对象 `tempObj`；
+-   接着调用 `CreateObj.call` 方法，并将 `tempObj` 作为 call 方法的参数，这样当 `CreateObj` 的执行上下文创建时，它的 this 就指向了 `tempObj` 对象
+-   然后执行 `CreateObj` 函数，此时的 `CreateObj` 函数执行上下文中的 this 指向了 `tempObj` 对象；
 -   最后返回 tempObj 对象
+
 用代码来表示就是：
 ```js
 var tempObj = {}
-CreateObj.call(tempObj)
-return tempObj
+CreateObj.call(tempObj);
+return tempObj;
 ```
 
 ## this 的缺陷
@@ -95,7 +99,9 @@ var myObj = {
   name : " 极客时间 ", 
   showThis: function(){
     console.log(this) // showThis 中的 this -> myObj
-    function bar(){console.log(this)} // bar 中的 this -> window
+    function bar(){
+        console.log(this)
+    } // bar 中的 this -> window
     bar()
   }
 }
@@ -105,15 +111,20 @@ myObj.showThis()
 
     本质：把 this 体系转换为了作用域的体系
 
-解决方案2：箭头函数
+解决方案2：**箭头函数 -> 不会创建自身的执行上下文，取决于外部函数**
 
      ES6 中的箭头函数并不会创建其自身的执行上下文，所以箭头函数中的 this 取决于它的外部函数
 
 ### 2. 普通函数中的 this 默认指向全局对象 window
 这样会打破数据的边界，造成一些误操作
 
-解决方案1：如果要让函数执行上下文中的 this 指向某个对象，最好的方式是通过 call 方法来显示调用。
-解决方案2：通过设置 JavaScript 的“严格模式”来解决。在严格模式下，默认执行一个函数，其函数的执行上下文中的 this 值是 undefined
+- 解决方案1
+
+    如果要让函数执行上下文中的 this 指向某个对象，最好的方式是通过 call 方法来 **显示调用**。
+
+- 解决方案2
+
+    通过设置 JavaScript 的**严格模式**来解决。在严格模式下，默认执行一个函数，其函数的执行上下文中的 this 值是 `undefined`
 
 
 
