--- a/_posts/浏览器原理相关内容/2021-04-11-09 作用域链和闭包.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-09 作用域链和闭包.md
@@ -15,17 +15,22 @@ typora-root-url: ..
 # 09 作用域链和闭包
 
 先开看一段代码：输出的结果应该是什么？ -- bye，坑
+
+原因：JavaScript **作用域链是由词法作用域决定**的，**词法作用域就是根据代码的位置来决定**的，详见下文分析
+
 <img src="/../img/assets_2019/image-20210411104738718.png" alt="image-20210411104738718" style="zoom:20%;" />
 
 ### 作用域链
-作用域链：JavaScript 引擎首先会在“当前的执行上下文”中查找该变量，如果在当前的变量环境中没有查找到，那么 JavaScript 引擎会继续在 outer 所指向的执行上下文中查找。
+作用域链：JavaScript 引擎首先会在“当前的执行上下文”中查找该变量，如果在当前的变量环境中没有查找到，那么 JavaScript 引擎会继续**在 outer 所指向的执行上下文**中查找。
 
-注意：在每个执行上下文的变量环境中，都包含了一个**外部引用**，用来指向外部的执行上下文，我们把这个外部引用称为outer。
-<img src="/../img/assets_2019/image-20210411104928271.png" alt="image-20210411104928271" style="zoom:40%;" />
+注意：在每个执行上下文的变量环境中，都包含了一个**外部引用**，用来指向外部的执行上下文，我们把这个外部引用称为outer 
 
-### 词法作用域
+<img src="/../img/assets_2019/image-20210411104928271.png" alt="image-20210411104928271" style="zoom:30%;" />
 
-词法作用域：指作用域是由代码中函数声明的位置来决定的。
+### 词法作用域(outer来源)
+
+词法作用域定义：指作用域是由代码中 **函数声明的位置** 来决定的。
+
 <img src="/../img/assets_2019/image-20210411105118567.png" alt="image-20210411105118567" style="zoom:30%;" />
 
 JavaScript **作用域链是由词法作用域决定**的，**词法作用域就是根据代码的位置来决定**的。
@@ -34,8 +39,11 @@ JavaScript **作用域链是由词法作用域决定**的，**词法作用域就
 <img src="/../img/assets_2019/image-20210411105239990.png" alt="image-20210411105239990" style="zoom:35%;" />
 
 ## 闭包
-理论：在 JavaScript 中，根据词法作用域的规则，内部函数总是可以访问其外部函数中声明的变量，当通过调用一个外部函数返回一个内部函数后，即使该外部函数已经执行结束了，但是内部函数引用外部函数的变量依然保存在内存中，我们就把这些变量的集合称为闭包。
+理论：
+
+​	在 JavaScript 中，根据 **词法作用域** 的规则，内部函数总是可以访问其外部函数中声明的变量，当通过调用一个外部函数返回一个内部函数后，**即使该外部函数已经执行结束了，但是内部函数引用外部函数的变量依然保存在内存中**，我们就把这些变量的集合称为闭包。
 理解：
+
 ```javascript
 function foo() {
     var myName = " 极客时间 "
@@ -61,8 +69,11 @@ bar.setName(" 极客邦 ")
 <img src="/../img/assets_2019/image-20210411105752559.png" alt="image-20210411105752559" style="zoom:30%;" />
 
 2、当`return innerBar`返回给全局变量 bar 时，虽然 foo 函数已经执行结束，但是 getName 和 setName 函数依然可以使用 foo 函数中的变量 myName 和 test1。所以当 foo 函数执行完成之后，其整个调用栈的状态如下图所示：
-![image-20210411105909116](/../img/assets_2019/image-20210411105909116.png)
+
+<img src="/../img/assets_2019/image-20210411105909116.png" alt="image-20210411105909116" style="zoom:30%;" />
+
 3、`bar.setName`中给`myName`赋值时，调用栈如下图：
-当前执行上下文–>foo 函数闭包–> 全局执行上下文
-![image-20210411110043855](/../img/assets_2019/image-20210411110043855.png)
+当前执行上下文–> foo 函数闭包 –> 全局执行上下文
+
+<img src="/../img/assets_2019/image-20210411110043855.png" alt="image-20210411110043855" style="zoom:30%;" />
 
