--- a/_posts/算法、刷题/2021-07-03-70. 爬楼梯.md
+++ b/_posts/算法、刷题/2021-07-03-70. 爬楼梯.md
@@ -68,3 +68,24 @@ var climbStairs = function(n) {
 };
 ```
 
+- 方法二：动态规划
+
+核心逻辑：将问题拆分成多个子问题 —> 爬第n阶楼梯的方法数量，等于 2 部分之和
+- 爬上 `n - 1` 阶楼梯的方法数量。因为再爬 1 阶就能到第 n 阶
+- 爬上 `n - 2` 阶楼梯的方法数量，因为再爬 2 阶就能到第 n 阶
+
+分析完逻辑可以发现 —> 这已经是 `斐波那契数` 的算法问题了
+
+```js
+// 贴一下官方提供的动态规划解法 -- 你猜我看懂了么？
+var climbStairs = function(n) {
+    let p = 0, q = 0, r = 1;
+    for (let i = 1; i <= n; ++i) {
+        p = q;
+        q = r;
+        r = p + q;
+    }
+    return r;
+};
+```
+
