344. 反转字符串 -- 方法二

--- a/_posts/算法、刷题/2021-07-03-344. 反转字符串.md
+++ b/_posts/算法、刷题/2021-07-03-344. 反转字符串.md
@@ -33,3 +33,18 @@ var reverseString = function(s) {
 };
 ```
 
+- 方法二：
+
+    利用 es6 的解构赋值
+
+```js
+var reverseString = function (s) {
+    let mid = Math.floor(s.length / 2);
+    for(let i = 0; i < mid ; i++) {
+        // 解构赋值
+        [s[i], s[s.length - 1 - i]] = [s[s.length - 1 - i], s[i]];
+    }
+    return s
+};
+```
+
