add：9. 回文数 - 方法二：通过余数处理

--- a/_posts/算法、刷题/2021-07-04-9. 回文数.md
+++ b/_posts/算法、刷题/2021-07-04-9. 回文数.md
@@ -43,3 +43,33 @@ var isPalindrome = function (x) {
 };
 ```
 
+- 方法二：通过余数处理
+
+    <img src="/../img/assets_2019/image-20210704123843212.png" alt="image-20210704123843212" style="zoom:35%;" />
+
+时间复杂度：O(n)，空间复杂度：xx
+
+核心思想：不改变数字类型，通过余数的方法进行取数
+
+【注意⚠️】：每次取完数就把 x 的头尾数字减掉不可行 —>  例如`10000021` ，减掉头尾，数字直接变成 `2`了
+
+分析过程：<img src="/../../../../Downloads/IMG_03ED87E919A7-1.jpeg" alt="IMG_03ED87E919A7-1" style="zoom:18%;" />
+
+```js
+let isPalindrome = (x) => {
+    if(x < 0) {
+        return false
+    }
+    // 通过余数处理
+    let length = x.toString().length;
+    for(let i = 0; i < Math.floor(length / 2); i++) {
+        let left = parseInt(x / Math.pow(10, length - 1 - i)) % 10;
+        let right = parseInt(x % Math.pow(10, i + 1) / Math.pow(10, i));
+        if(left !== right) {
+            return false
+        }
+    }
+    return true
+}
+```
+
