add：事件循环复习+整理

--- a/_posts/浏览器原理相关内容/2021-04-12-14 消息队列和事件循环.md
+++ b/_posts/浏览器原理相关内容/2021-04-12-14 消息队列和事件循环.md
@@ -25,8 +25,13 @@ typora-root-url: ..
 
 —> 要让这么多不同类型的任务在 **渲染进程的主线程** 中有条不紊地执行，这就需要一个系统来统筹调度这些任务，这个 **统筹调度系统** 就是我们今天要讲的 <u>消息队列和事件循环系统</u>
 
+
+
+<img src="/../img/assets_2019/image-20210705103939996.png" alt="image-20210705103939996" style="zoom:50%;" />
+
 ## 为什么出现了微任务
 单一消息队列执行存在两点问题：
+
 1、如何处理高优先级的任务
 
 - 问题：
