--- a/_posts/浏览器原理相关内容/2021-04-12-15 setTimeout - 延迟消息队列.md
+++ b/_posts/浏览器原理相关内容/2021-04-12-15 setTimeout - 延迟消息队列.md
@@ -35,7 +35,7 @@ setTimeout解决方案 ： 在 Chrome 中除了正常使用的消息队列之外
 
 延时队列会根据发起时间和延迟时间计算出到期的任务，然后依次执行这些到期的任务。
 
-等到期的任务执行完成之后，再继续下一个循环过程。
+等当前的任务执行完成之后，再继续下一个循环过程。
     
 
 ### 定时器过程中存在的那些陷阱
