--- a/_posts/浏览器原理相关内容/2021-04-13-17 微任务和宏任务.md
+++ b/_posts/浏览器原理相关内容/2021-04-13-17 微任务和宏任务.md
@@ -15,8 +15,10 @@ typora-root-url: ..
 # 17 微任务和宏任务
 
  <span style="color:red">微任务</span>：`MutationObserver`、`Promise`以及`以Promise为基础的技术`
+
+ <span style="color:red">宏任务</span>：<strong>渲染事件</strong>（解析DOM、计算布局、绘制）、<strong>用户交互事件</strong>（鼠标点击、滚动页面、放大缩小等）、<strong>js脚本执行事件</strong>、<strong>网络请求完成</strong>、`setTimeout()`、`setInterval`
+
 ## 复习宏任务定义
- <span style="color:red">宏任务</span>：消息队列中的任务，例如<strong>渲染事件</strong>（解析DOM、计算布局、绘制）、<strong>用户交互事件</strong>（鼠标点击、滚动页面、放大缩小等）、<strong>js脚本执行事件</strong>、<strong>网络请求完成</strong>
 -   主线程中，引入了**消息队列（ <span style="color:red">包括延迟执行队列和普通消息队列</span>）和事件循环机制**，主线程采用一个`for`循环，从消息队列里面取出任务并执行。
 
 其中涉及的**事件循环机制**流程：
