--- a/_posts/浏览器原理相关内容/2021-04-10-07 执行栈 调用栈（执行上下文栈）.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-07 执行栈 调用栈（执行上下文栈）.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:     07 调用栈（执行上下文栈）
+title:     07 执行栈/调用栈（执行上下文栈）
 subtitle:  
 date:       2021-04-10
 author:     
@@ -12,10 +12,10 @@ typora-root-url: ..
 ---
 
 
-# 07 调用栈（执行上下文栈）
+# 07 执行栈/调用栈（执行上下文栈）
 
 ### 调用栈定义
-在执行上下文创建好后，JavaScript引擎会将执行上下文压入栈中，通常把这种用来**管理执行上下文的栈**称为执行上下文栈，又称调用栈
+在执行上下文创建好后，JavaScript引擎会将执行上下文压入栈中，通常把这种用来**管理执行上下文的栈**称为执行上下文栈，又称调用栈/执行栈
 
 ### 有三种情况会创建执行上下文
 -   js执行 **全局代码** 时 -- 编译全局代码，并创建**全局执行上下文**
