add：怎么创建执行上下文 - this、变量环境、词法环境

--- a/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
@@ -28,6 +28,49 @@ typora-root-url: ..
 
 执行上下文中存在一个**变量环境的对象**（Viriable Environment），该对象中保存了**变量提升**的内容
 
+#### 怎么创建执行上下文？
+
+创建执行上下文有两个阶段：**1) 创建阶段** 和 **2) 执行阶段**。
+
+##### 1/2、The Creation Phase - **创建阶段**
+
+- **this** 值的决定，即我们所熟知的 **This 绑定**
+
+    - 全局执行上下文中 —> `this` 指向**全局对象**（浏览器中 - `window`）
+
+    - 函数执行上下文中 —> `this` 的值取决于**该函数是如何被调用的**。
+
+        —> 如果它被一个 **引用对象** 调用，那么 `this` 会被设置成那个对象，
+
+        —> 否则 `this` 的值被设置为全局对象或者 `undefined`（在严格模式下）。
+
+        ```js
+        let foo = {
+            baz: function() {
+                console.log(this);
+            }
+        }
+        foo.baz();   // 'this' 引用 'foo', 因为 'baz' 被对象 'foo' 调用
+        
+        let bar = foo.baz;
+        bar();       // 'this' 指向全局 window 对象，因为没有指定引用对象
+        ```
+
+- 创建**词法环境**组件 — `let/const`
+
+    - 定义：
+
+        词法环境由 **环境记录器**（存储变量和函数声明的实际位置） 和一个 **外部词法环境的引用**（可以访问其父级词法环境 - 作用域） 组成。
+
+    - **词法环境**有两种类型：
+
+        - **全局环境** 没有外部环境引用的词法环境 -> `null`；环境记录器用于定义全局上下文中的变量和函数
+        - **函数环境** 外部环境引用可能是全局环境，也可能是任何包含此内部函数的外部函数；环境记录起用于存储变量、函数、参数
+
+- 创建**变量环境**组件 — `var`
+
+    - 定义：同样是一个词法环境，其环境记录器持有 **变量声明语句** 在执行上下文中创建的**绑定关系**
+
 ## 2、执行阶段
 按照顺序一行一行地执行可执行代码
 
