modify：复习补充垃圾回收机制 + 防止内存泄漏

--- a/_posts/浏览器原理相关内容/2021-04-11-12-1 内存泄漏.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-12-1 内存泄漏.md
@@ -22,6 +22,14 @@ typora-root-url: ..
 
 - 几种垃圾回收机制：详情看上一篇 垃圾回收机制，标记-清除、标记-整理等算法
 
+- 如何避免内存泄漏：
+
+    - 1 尽可能少地创建全局变量
+    - 2 手动清除定时器
+    - 3 少用闭包
+    - 4 清除DOM引用
+    - 5 弱引用
+
 - JS 内存泄露的常见场景
 
     - 1、意外的全局变量（eslint 校验会报错）
