--- a/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
@@ -20,19 +20,21 @@ typora-root-url: ..
 <img src="/../img/assets_2019/image-20210410153313919.png" alt="image-20210410153313919" style="zoom:50%;" />
 
 编译阶段会生成两部分内容：
--   执行上下文
+-   创建执行上下文 The Creation Phase
 -   可执行代码
-### 执行上下文（Execution context）
+### 创建执行上下文（Execution context）
 
-    执行上下文是JavaScript执行一段代码时的运行环境，比如调用一个函数，就会进入这个函数的执行上下文，确定该函数在执行期间用到的诸如this、变量、对象以及函数等。
+    执行上下文是JavaScript执行一段代码时的运行环境。
 
-执行上下文中存在一个**变量环境的对象**（Viriable Environment），该对象中保存了**变量提升**的内容
+对于每个执行上下文，都有三个重要属性：
 
-#### 怎么创建执行上下文？
+1、**this**
 
-创建执行上下文有两个阶段：**1) 创建阶段** 和 **2) 执行阶段**。
+2、**作用域链** (Scope chain)：当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(词法层面上的父级)执行上下文的变量对象中查找，一直找到全局上下文的变量对象，也就是全局对象。这样由多个执行上下文的变量对象构成的链表就叫做作用域链
 
-##### 1/2、The Creation Phase - **创建阶段**
+3、**变量对象** (Variable object，VO) - 保存了**变量提升**的内容
+
+
 
 - **this** 值的决定，即我们所熟知的 **This 绑定**
 
@@ -60,7 +62,7 @@ typora-root-url: ..
 
     - 定义：
 
-        词法环境由 **环境记录器**（存储变量和函数声明的实际位置） 和一个 **外部词法环境的引用**（可以访问其父级词法环境 - 作用域） 组成。
+        词法环境由 **环境记录器**（<span style="color:red">存储变量和函数声明的实际位置 -- **作用域在函数定义的时候就决定**</span>） 和一个 **外部词法环境的引用**（可以访问其父级词法环境 - 作用域） 组成。
 
     - **词法环境**有两种类型：
 
