add：204. 计数质数 - 方法一：暴力遍历（超时） + 方法二 - 埃氏筛

--- a/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
@@ -62,7 +62,7 @@ typora-root-url: ..
 
     - 定义：
 
-        词法环境由 **环境记录器**（<span style="color:red">存储变量和函数声明的实际位置 -- **作用域在函数定义的时候就决定**</span>） 和一个 **外部词法环境的引用**（可以访问其父级词法环境 - 作用域） 组成。
+        词法环境由 **环境记录器**（<span style="color:red">存储变量和函数声明的实际位置 -- **作用域在函数定义的时候就决定**</span>） 和一个 **外部词法环境的引用**（可以访问其父级词法环境 - 作用域链） 组成。
 
     - **词法环境**有两种类型：
 
