modify：复习+ 整理作用域相关

--- a/_posts/JS原生基础相关/2019-06-18-函数及作用域链.md
+++ b/_posts/JS原生基础相关/2019-06-18-函数及作用域链.md
@@ -61,12 +61,17 @@ funcname();
 
 除了函数以外,其他的任何位置定义的变量都是全局变量。
 * **局部变量**：在函数内部定义的变量，是局部变量，外面不能使用；
-* **全局变量**：如果页面不关闭，那么就不会释放，就会占空间，消耗内存；
-**隐式全局变量 : 声明的变量没有var,就叫隐式全局变量；**
-* **全局作用域**：全局变量的使用范围。
-* **局部作用域**：局部变量的使用范围。
-  **全局变量是不能被删除的,隐式全局变量是可以被删除的**
 
+* **全局变量**：如果页面不关闭，那么就不会释放，就会占空间，消耗内存；
+
+  **隐式全局变量 : 声明的变量没有var,就叫隐式全局变量；**
+
+* **全局作用域**：全局变量的使用范围。
+
+* **局部作用域**：局部变量的使用范围。
+  
+  **全局变量是不能被删除的,隐式全局变量是可以被删除的**
+  
   **注意：定义变量使用var是不会被删除的,没有var是可以删除的**
 ```javascript
     var num1=10;
@@ -103,7 +108,7 @@ funcname();
      alert(a); //显示undefined
      var a = 10;
  }
- console.log(a);//输出25
+ console.log(a);//输出2
  ```
  ```         javascript
  案例2：
@@ -112,13 +117,18 @@ funcname();
  console.log(b);//输出9
  console.log(a);//报错
  function f1() {
-     var a = b = c = 9;
+     var a = b = c = 9; // --> var a = 9; window.b = 9; window.c = 9
      console.log(a);//输出9
      console.log(b);//输出9
      console.log(c);//输出9
  }
  ```
-函数表达式是一种变量赋值，变量声明提前了，但是变量不能调用；
+输出 `a` 报错的原因如下，`b` 和 `c` 其实已经被挂载到 `window` 下面了：
+
+![image-20210706142835940](/../img/assets_2019/image-20210706142835940.png)
+
+**函数表达式是一种变量赋值**，变量声明提前了，但是变量不能调用；
+
  ```javascript
  案例3：
  f1(); //报错
