--- a/_posts/浏览器原理相关内容/2021-04-10-08 JS如何实现块级作用域.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-08 JS如何实现块级作用域.md
@@ -15,7 +15,7 @@ typora-root-url: ..
 # 08 JS如何实现块级作用域
 
 ### 总结
-块级作用域就是通过**词法环境**的栈结构来实现的，而变量提升是通过**变量环境**来实现
+**块级作用域**就是通过**词法环境**的栈结构来实现的，而**变量提升**是通过**变量环境**来实现
 
 ### 块级作用域
 
