--- a/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
+++ b/_posts/浏览器原理相关内容/2021-04-10-06 JS执行顺序：编译+执行.md
@@ -30,7 +30,7 @@ typora-root-url: ..
 
 1、**this**
 
-2、**作用域链** (Scope chain)：当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(词法层面上的父级)执行上下文的变量对象中查找，一直找到全局上下文的变量对象，也就是全局对象。这样由多个执行上下文的变量对象构成的链表就叫做作用域链
+2、**作用域链** (Scope chain) - **词法环境**：当查找变量的时候，会先从当前上下文的变量对象中查找，如果没有找到，就会从父级(词法层面上的父级)执行上下文的变量对象中查找，一直找到全局上下文的变量对象，也就是全局对象。这样由多个执行上下文的变量对象构成的链表就叫做作用域链
 
 3、**变量对象** (Variable object，VO) - 保存了**变量提升**的内容
 
@@ -58,7 +58,7 @@ typora-root-url: ..
         bar();       // 'this' 指向全局 window 对象，因为没有指定引用对象
         ```
 
-- 创建**词法环境**组件 — `let/const`
+- 作用域链 - 创建**词法环境**组件 — `let/const`
 
     - 定义：
 
