--- a/_posts/浏览器原理相关内容/2021-04-11-09 作用域链和闭包.md
+++ b/_posts/浏览器原理相关内容/2021-04-11-09 作用域链和闭包.md
@@ -39,10 +39,16 @@ JavaScript **作用域链是由词法作用域决定**的，**词法作用域就
 <img src="/../img/assets_2019/image-20210411105239990.png" alt="image-20210411105239990" style="zoom:35%;" />
 
 ## 闭包
-理论：
+#### 理论：
 
 ​	在 JavaScript 中，根据 **词法作用域** 的规则，内部函数总是可以访问其外部函数中声明的变量，当通过调用一个外部函数返回一个内部函数后，**即使该外部函数已经执行结束了，但是内部函数引用外部函数的变量依然保存在内存中**，我们就把这些变量的集合称为闭包。
-理解：
+
+#### 产生闭包的核心：
+
+-   第一步是需要 **预扫描内部函数**
+-   第二步是把 **内部函数引用的外部变量** 保存到 <span style="color:red">堆</span> 中
+
+#### 案例：
 
 ```javascript
 function foo() {
@@ -62,18 +68,32 @@ function foo() {
 }
 var bar = foo()
 bar.setName(" 极客邦 ")
+bar.getName()
 ```
 从调用栈来理解闭包：
-1、执行到`foo()`方法时，执行栈如下：
+
+1、当 `JavaScript` 引擎执行到 `foo()` 时，首先会编译，并创建一个空 **执行上下文** ，执行栈如下：
 
 <img src="/../img/assets_2019/image-20210411105752559.png" alt="image-20210411105752559" style="zoom:30%;" />
 
-2、当`return innerBar`返回给全局变量 bar 时，虽然 foo 函数已经执行结束，但是 getName 和 setName 函数依然可以使用 foo 函数中的变量 myName 和 test1。所以当 foo 函数执行完成之后，其整个调用栈的状态如下图所示：
+​	在编译过程中，遇到内部函数 `setName`，JavaScript引擎还要对内部函数做一次 **快速的词法扫描**，发现该内部函数引用了 `foo` 函数中的 `myName` 变量，由于是 **内部函数引用了外部函数的变量**，所以JavaScript引擎判断这是一个**闭包**，于是在 <span style="color:red">**堆** 空间创建 一个 `closure(foo)` 的对象（这是一个内部对象，JavaScript是无法访问的）</span> ，用来保存 `myName` 变量
+
+​	接着继续扫描到 `getName` 方法时，发现该函数内部还引用变量 `test1`，于是 JavaScript引擎又将 `test1` 添加到 `closure(foo)` 对象中
+
+​	由于 `test2` 并没有被内部函数引用，所以 `test2` 依然保存在调用栈中（图中 `test2` 应该在词法环境中）
+
+<img src="/../img/assets_2019/image-20210411150011033.png" alt="image-20210411150011033" style="zoom:35%;" />
+
+2、当 `return innerBar` 返回给全局变量 bar 时，虽然 `foo` 函数已经执行结束，但是 `getName` 和 `setName` 函数依然可以使用 `foo` 函数中的变量 `myName` 和 `test1`。所以当 `foo` 函数执行完成之后，其整个调用栈的状态如下图所示：
 
 <img src="/../img/assets_2019/image-20210411105909116.png" alt="image-20210411105909116" style="zoom:30%;" />
 
-3、`bar.setName`中给`myName`赋值时，调用栈如下图：
+3、`bar.setName` 中给 `myName` 赋值时，调用栈如下图：
 当前执行上下文–> foo 函数闭包 –> 全局执行上下文
 
 <img src="/../img/assets_2019/image-20210411110043855.png" alt="image-20210411110043855" style="zoom:30%;" />
+
+
+
+
 
